samples/_failures_safe/1761137626_24aa3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c49612ed.c: In function ‘main’:
./samples/SAFE/__tmp_c49612ed.c:160:5: error: expected expression at end of input
  160 |     if (input_len >
      |     ^~
./samples/SAFE/__tmp_c49612ed.c:160:5: error: expected declaration or statement at end of input
